@startuml backend-classes

class Forecast {
    id: int
    date: Date
    updatedAt: Date
}

class ForecastPeriod {
    id: int
    phenomenon: String
    tempMin: Integer
    tempMax: Integer
    text: String
    sea: String
    peipsi: String
}

class Place {
    id: int
    name: String
    phenomenon: String
    tempMin: Integer
    tempMax: Integer
}

class Wind {
    id: int
    name: String
    direction: String
    speedMin: Integer
    speedMax: Integer
    gust: Integer
}

Forecast "1" - "1" ForecastPeriod : night >
Forecast "1" - "1" ForecastPeriod : day >
ForecastPeriod "1  " -- "n" Place : place >
ForecastPeriod "1 " -- "n  " Wind : wind >

@enduml
